--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".AdminPage"></activity>
         <activity
             android:name=".info_user"
             android:label="@string/title_activity_info_user"
@@ -19,7 +20,6 @@
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-5281211788138084~9976282312" />
 
-        <activity android:name=".AdminPage" />
         <activity android:name=".BonoCliente" />
         <activity android:name=".MainActivity" />
         <activity android:name=".CerrarSesion" />
